# sane-break

./: .clang-format  .clangd  .cmake-format.py  .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MacOSXBundleInfo.plist.in  NOTICE.md  PRIVACY.md  README.md  config.h.cmake  index.html  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
.github/: license_header.txt
.github/workflows/: build.yml  codeql.yml  mac-store.yml  macos.yml
images/: icon.icns
packaging/linux/: CMakeLists.txt  metainfo.xml  sane-break.desktop
packaging/linux/gnome/sane-break@allanchain.github.io/: extension.js  metadata.json
packaging/linux/kde/: CMakeLists.txt
packaging/macos/: Assets.car  MacOSXBundleInfo.plist.in  README.md  entitlement.plist
packaging/macos/icon.icon/: icon.json
packaging/windows/: AppxManifest.xml.in  CMakeLists.txt  create-logo  msix-template.xml.in
resources/: index.qrc  style.css
resources/fonts/: README.md
resources/sounds/: bell.mmp  chime.mmp  ding.mmp  wood.mmp
resources/translations/: cs.ts  de.ts  en.ts  es.ts  fr.ts  he.ts  hu.ts  it.ts  nl.ts  pl.ts  ru.ts  sane-break_en.ts  sane-break_zh.ts  sv.ts  uk.ts  zh.ts  zh_CN.ts  zh_SIMPLIFIED.ts  zh_TW.ts
scripts/: cn2tw.py  llm_suggestion.py  subset_bootstrap.py  weblate_priority.py
src/: CMakeLists.txt  app.cpp  app.h  battery-status.cpp  battery-status.h  break-window.cpp  break-window.h  config.h.cmake  config.h.in  default-pref.h  idle-time.cpp  idle-time.h  main.cpp  notice-window.cpp  notice-window.h  pref-window.cpp  pref-window.h  pref-window.ui  preferences.cpp  preferences.h  program-monitor.cpp  program-monitor.h  screen-lock.cpp  sound-player.cpp  sound-player.h  style.css  tray.cpp  tray.h  welcome.cpp  welcome.h  welcome.ui  widgets.cpp  widgets.h  window-manager.cpp  window-manager.h
src/app/: CMakeLists.txt  app.cpp  app.h  break-window.cpp  break-window.h  break-window.ui  break-windows.cpp  break-windows.h  focus-window.cpp  focus-window.h  focus-window.ui  heads-up-window.cpp  heads-up-window.h  main.cpp  meeting-prompt.cpp  meeting-prompt.h  meeting-prompt.ui  meeting-window.cpp  meeting-window.h  meeting-window.ui  postpone-window.cpp  postpone-window.h  postpone-window.ui  pref-window.cpp  pref-window.h  pref-window.ui  signal-handler.cpp  sound-player.cpp  sound-player.h  stats-window.cpp  stats-window.h  stats-window.ui  text-window.cpp  text-window.h  tray.cpp  tray.h  welcome.cpp  welcome.h  window-control.cpp  window-control.h
src/app/cmake/: translation.cmake
src/app/layer-shell/: CMakeLists.txt  interface.h  layer-shell.cpp  layer-shell.h
src/app/unix/: signal-handler.cpp  signal-handler.h
src/app/widgets/: color-edit.h  dynamic-button.h  dynamic-label.h  language-select.cpp  language-select.h  stepped-slider.cpp  stepped-slider.h  timeline-view.cpp  timeline-view.h  wrapped-checkbox.cpp  wrapped-checkbox.h
src/app/windows/: signal-handler.cpp  signal-handler.h
src/break/: macos_window.h  macos_window.mm  scheduler.cpp  scheduler.h  window.cpp  window.h  winmanager.cpp  winmanager.h
src/core/: CMakeLists.txt  app-data.cpp  app-data.h  app-states.cpp  app-states.h  app.cpp  app.h  break-windows.cpp  break-windows.h  cli.cpp  cli.h  command-ipc.cpp  command-ipc.h  db.cpp  db.h  flags.h  idle-time.h  meeting-prompt.h  preferences.cpp  preferences.h  system-monitor.h  timer.h  window-control.cpp  window-control.h
src/gui/: CMakeLists.txt  break-window.cpp  break-window.h  break-window.ui  pref-window.cpp  pref-window.h  pref-window.ui  sound-player.cpp  sound-player.h  text-window.cpp  tray.cpp  tray.h  welcome.cpp  welcome.h  window-manager.cpp  window-manager.h
src/gui/layer-shell/: interface.h  layer-shell.cpp
src/gui/widgets/: dynamic-label.h  language-select.cpp  language-select.h  stepped-slider.cpp  stepped-slider.h
src/idle/: CMakeLists.txt  darwin.cpp  darwin.h  factory.cpp  factory.h  idle-interface.h  kde.cpp  kde.h  macos-idle.h  read-based-idle.cpp  read-based-idle.h  system.cpp  system.h  windows-idle.h  windows.cpp  windows.h
src/idle/linux/: CMakeLists.txt  factory.cpp  factory.h
src/idle/linux/gnome/: CMakeLists.txt  gnome-idle.cpp  gnome-idle.h
src/idle/linux/wayland/: CMakeLists.txt  ext-idle-notify-v1.xml  wayland-idle.cpp  wayland-idle.h
src/idle/linux/x11/: CMakeLists.txt  x11-idle.cpp  x11-idle.h
src/lib/: CMakeLists.txt  app-core.cpp  app-core.h  auto-start.h  battery-status.cpp  battery-status.h  flags.h  idle-time.cpp  idle-time.h  preferences.cpp  preferences.h  program-monitor.cpp  program-monitor.h  screen-lock.cpp  screen-lock.h  screen-monitor.cpp  screen-monitor.h  sleep-monitor.cpp  sleep-monitor.h  system-monitor.cpp  system-monitor.h  timer.h  utils.cpp  utils.h
src/lib/linux/: auto-start.cpp  battery.cpp  battery.h  program-monitor.cpp  screen-lock.cpp  system-check.cpp  system-check.h
src/lib/linux/wayland/: idle.cpp  idle.h
src/lib/linux/wayland-check/: CMakeLists.txt  check.cpp  check.h  interface.h
src/lib/linux/x11/: idle.cpp  idle.h
src/lib/macos/: auto-start.mm  battery.cpp  battery.h  idle.cpp  idle.h  program-monitor.cpp  program-monitor.mm  screen-lock.cpp  workspace.h  workspace.mm
src/lib/windows/: auto-start.cpp  battery.cpp  battery.h  idle.cpp  idle.h  program-monitor.cpp  screen-lock.cpp
src/linux/: battery.cpp  battery.h  system-check.cpp
src/linux/kde/: idle.cpp  idle.h
src/linux/wayland/: idle.cpp  idle.h
src/linux/x11/: idle.cpp  idle.h
src/macos/: battery.cpp  idle.cpp  idle.h  workspace.h  workspace.mm
src/preferences/: window.cpp  window.h
src/windows/: battery.cpp  battery.h  idle.cpp  idle.h
test/: CMakeLists.txt  dummy.h  test-app.cpp  test-command.cpp  test-db.cpp  test-edge.cpp  test-screenshot.cpp  test-window.cpp
